Minor fix
- Removes the scrollbar on Chrome

--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1565,14 +1565,16 @@ input[type="tel"] {
 @media all and (min-width: 1300px) {
 	html, body {
 		height: 100%;
-		scrollbar-width: none; }
-		
+		scrollbar-width: none;
+	    overflow:hidden; }
+
 	.content-wrapper {
 		margin-left: 530px; } }
 @media all and (max-width: 1100px) {
 	html, body {
 		height: 100%;
-		scrollbar-width: none; }
+		scrollbar-width: none;
+	    overflow:hidden; }
 
 	.panel-cover__logo {
 		width: 70px; }
@@ -1593,7 +1595,8 @@ input[type="tel"] {
 @media all and (max-width: 960px) {
 	html, body {
 		height: 100%;
-		scrollbar-width: none; }
+		scrollbar-width: none;
+		overflow: hidden; }
 
 	.btn-mobile-menu {
 		display: block; }
@@ -1686,7 +1689,8 @@ input[type="tel"] {
 @media all and (max-width: 340px) {
 	html, body {
 		height: 100%;
-		scrollbar-width: none; }
+		scrollbar-width: none;
+	    overflow:hidden; }
 
 	.panel-main__inner {
 		padding: 0 5%; }
